--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,10 @@
 name: ThiemesPresents
 main: nl.thieme.tp.Main
 version: 1.0
+api-version: 1.13
 authors: [Thieme]
+softdepend:
+  - Essentials
 description: Present wraps for everyone!
 commands:
   givepresent:
