Added subcommands, serializing and deserializing presents. Added more configs

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>plugin.yml</include>
+                    <include>config.yml</include>
                     <include>presents.yml</include>
+                    <include>messages.yml</include>
                 </includes>
             </resource>
         </resources>
