--- a/pom.xml
+++ b/pom.xml
@@ -4,38 +4,39 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>thiemespresents</groupId>
-    <artifactId>ThiemesPresents</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>wrapper</module>
+        <module>wrapper1_12</module>
+        <module>commons</module>
+    </modules>
 
-    <packaging>jar</packaging>
+    <groupId>nl.thiemespresents</groupId>
+    <artifactId>thiemespresents</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0</version>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <versionMavenShade>3.0.0</versionMavenShade>
     </properties>
+
     <build>
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>plugin.yml</include>
-                    <include>config.yml</include>
-                    <include>presents.yml</include>
-                    <include>messages.yml</include>
-                </includes>
-            </resource>
-        </resources>
         <finalName>${project.name}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${versionMavenShade}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -71,6 +72,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    
 </project>
