Trying to get multi module building to work

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -2,7 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    <groupId>nl.thiemespresents</groupId>
+    <artifactId>commons</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
 
     <parent>
         <artifactId>thiemespresents</artifactId>
@@ -10,24 +15,44 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>commons</artifactId>
-    <version>1.0</version>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <build>
+        <directory>../target</directory>
+        <finalName>ThiemesPresents</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>nl.thiemespresents:wrapper1_12</include>
+                                    <include>nl.thiemespresents:wrapper</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>nl.thiemespresents</groupId>
             <artifactId>wrapper1_12</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>nl.thiemespresents</groupId>
             <artifactId>wrapper</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
