--- a/commons/src/main/resources/config.yml
+++ b/commons/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 can-sign: true
 
 
+# Please use 1.13+ item names!
 # Blocked Slot Item
 blocked-slot-material: GRAY_STAINED_GLASS_PANE
 # Material when waiting for item to be selected
@@ -13,8 +14,18 @@ confirm-material: LIME_CONCRETE
 # Allow storage items (shulker boxes, chests) to be wrapped
 allow-wrapping-storage-items: false
 
-# How many storage items can be wrapped inside a wrapped storage item
-storage-item-wrapping-limit: 2
+# Sounds
+open-sound:
+  sound: ENTITY_HORSE_SADDLE
+  volume: 0.4
+  pitch: 1.3
+
+wrap-sound:
+  sound: ENTITY_HORSE_SADDLE
+  volume: 0.4
+  pitch: 2.0
+
+
 
 # Presents can get a different name in anvil
 can-rename-in-anvil: false
@@ -23,9 +34,15 @@ sign-character-limit: 200
 
 signing-timeout-seconds: 30
 
-presents-can-be-placed-on-head: false
-
 disabled-worlds:
   - world
   - world_nether
   - world_the_end
+
+
+# Coming soon:
+
+# presents-can-be-placed-on-head: false
+
+# How many storage items can be wrapped inside a wrapped storage item
+# storage-item-wrapping-limit: 2
