Fixed permissions, allowing of only one present to be used at the time

--- a/commons/src/main/resources/config.yml
+++ b/commons/src/main/resources/config.yml
@@ -34,11 +34,9 @@ sign-character-limit: 200
 
 signing-timeout-seconds: 30
 
+# Disables crafting of recipes in the following worlds
 disabled-worlds:
-  - world
-  - world_nether
-  - world_the_end
-
+  - disabled-world
 
 # Coming soon:
 
